# eve-fit-assistant

./: .env.example  .gitignore  .gitmodules  .tokeignore  CONTRIBUTION.md  Cargo.toml  README.md  REALEASING.md  analysis_options.yaml  efa.config.example.toml  efa.config.toml  flutter_launcher_icons.yaml  flutter_native_splash.yaml  flutter_rust_bridge.yaml  l10n.yaml  out.txt  pubspec.yaml  pyproject.toml  ruff.toml  rustfmt.toml  x  x.ps1  x.py
android/: .gitignore
android/app/: build.gradle  build.gradle.kts
content/announcement/: about-beta-test-version.md  about-stable-version.md  about-test-version.md
content/changelog/: v0.10.0.md  v0.11.0.md  v0.12.0.md  v0.13.0.md  v0.14.0.md  v0.15.0.md  v0.16.0.md  v0.17.0.md  v0.18.0.md  v0.19.0.md  v0.2.0.md  v0.20.0.md  v0.21.0.md  v0.22.0.md  v0.23.0.md  v0.24.0.md  v0.25.0.md  v0.26.0.md  v0.27.0.md  v0.28.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.6.0.md  v0.7.0.md  v0.8.0.md  v0.9.0.md
data/: .gitignore  README.md  bundle.ps1  codegen.ps1  compile.ps1  convert.ps1  msgpack_to_json.py  routine.ps1
data/bundle/: attr_icon.py  download.py  extra.py  group_icon.py  pyproject.toml  read_resfile_index.py  type_icon.py
data/codegen/: character.py  codegen.py  patch_constant.py  units.py  version.py
data/convert/: attribute_pb2.py  cache.py  character_pb2.py  convert_attribute.py  convert_character.py  convert_damage_profile.py  convert_dynamic_item.py  convert_fighter.py  convert_groups.py  convert_implant_group.py  convert_market_group.py  convert_ships.py  convert_skills.py  convert_subsystem.py  convert_tactical_mode.py  convert_type_skills.py  convert_type_slots.py  convert_types.py  convert_unit.py  damage_profile_pb2.py  dynamic_item_pb2.py  fighter_pb2.py  groups_pb2.py  i18n.py  i18n_pb2.py  implant_group_pb2.py  market_group_pb2.py  pyproject.toml  run.py  ships_pb2.py  skills_pb2.py  slots_pb2.py  subsystem_pb2.py  tactical_mode_pb2.py  types_pb2.py  unit_pb2.py
data/lib/: color.py  config.py  constant.py  localization.py  log.py  utils.py  validator.py
data/patches/: damage_profile.yaml  dogma_units.json  dogma_units.py  dynamic_items.json  dynamic_items.py  implant_group.ipynb  (+2 more)
integration_test/: simple_test.dart
l10n/: app_en.arb  app_zh.arb  header.dart
lib/: .gitignore  front.dart  init.dart  main.dart  utils.dart
logo/: logo-android12.psd  logo.psd
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: data.rs  error.rs  mod.rs  output.rs  proxy.rs  schema.rs  server.rs  simple.rs  storage.rs  validate.rs
rust/src/api/validate/: mod.rs
rust/src/api/validate/post_validate/: charge.rs  max_activate.rs  mod.rs
rust/src/api/validate/pre_validate/: booster_slot.rs  charge.rs  fit_target.rs  mod.rs  rig_size.rs  slot_num.rs
rust_builder/: pubspec.yaml
scripts/: codegen_assets.py
test/: widget_test.dart
(+548 files in other folders)
