[project]
name = "eve-fit-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0",
    "click-aliases>=1.0.5",
    "colorama>=0.4.6",
    "python-dotenv>=1.1.1",
    "convert",
    "pydantic>=2.11.9",
    "aiohttp>=3.12.15",
    "aiofiles>=24.1.0",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "ruff>=0.13.2",
]

[tool.uv.sources]
convert = { workspace = true }

[tool.uv.workspace]
members = ["rust/lib/eve-fit-os"]
