[project]
name = "eve-fit-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0",
    "click-aliases>=1.0.5",
    "colorama>=0.4.6",
    "python-dotenv>=1.1.1",
    "convert",
    "pydantic>=2.11.9",
    "aiohttp>=3.12.15",
    "aiofiles>=25.1.0",
    "tenacity>=9.1.2",
    "watchfiles>=1.1.0",
    "case-converter>=1.2.0",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "ruff>=0.13.2",
]

[tool.uv.sources]
convert = { workspace = true }

[tool.uv.workspace]
members = ["rust/lib/eve-fit-os"]
