[package]
name = "rust_lib_eve_fit_assistant"
version = "0.1.0"
edition = "2021" # not 2024 because of flutter_rust_bridge

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
eve-fit-os = { path = "lib/eve-fit-os" }
anyhow = "1.0.100"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
